# coupler

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
interface/: coupler.h
src/: couple_1d_1d.cpp  couple_1d_1d_2d.cpp  couple_1d_2d.cpp  couplefun.cpp  couplefun.h  coupler.cpp  createdem.cpp  globalfun.cpp  globalfun.h
test/: couple_1d_1d_2d_test.cpp  couple_1d_1d_test.cpp  createdem_test.cpp  globalfun.h  idinfo.h  offline_couple.cpp  online_couple.cpp  online_couple_test.cpp  partial_online_couple.cpp
